@@ -168,6 +168,7 @@ Roger Dev
 Raghuram Devarakonda
 Toby Dickenson
 Mark Dickinson
+Jack Diederich
 Yves Dionne
 Daniel Dittmar
 Jaromir Dolecek
